--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test": "truffle test"
     },
     "dependencies": {
+        "bignumber.js": "^7.1.0",
         "moment": "^2.22.1"
     }
 }
