--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "bignumber.js": "^7.1.0",
-        "moment": "^2.22.1"
+        "moment": "^2.22.1",
+        "truffle-hdwallet-provider": "0.0.5"
     }
 }
